main/default/objects/Free_Form_Endorsements__c/Free_Form_Endorsements__c.object-meta.xml
<CustomObject>
    <label>Free Form Endorsement</label>
    <nameField>
        <displayFormat>FF-{000}</displayFormat>
        <label>Free Form Endorsements ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Free Form Endorsements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>