main/default/objects/Free_Form_Endorsements__c/fields/Applicable_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Coverage__c</fullName>
    <label>Applicable Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GENERAL TERMS AND CONDITIONS</fullName>
            </value>
            <value>
                <fullName>DIRECTORS AND OFFICERS LIABILITY COVERAGE SECTION</fullName>
            </value>
            <value>
                <fullName>EMPLOYMENT PRACTICES LIABILITY COVERAGE SECTION</fullName>
            </value>
            <value>
                <fullName>FIDUCIARY LIABILITY COVERAGE SECTION</fullName>
            </value>
            <value>
                <fullName>CRIME COVERAGE SECTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>