main/default/objects/Free_Form_Endorsements__c/fields/Endorsement_Name__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Name__c</fullName>
    <label>Endorsement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>