main/default/objects/Free_Form_Endorsements__c/fields/Endorsement_Wording__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Wording__c</fullName>
    <label>Endorsement Wording</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>