main/default/objects/Free_Form_Endorsements__c/fields/Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_Number__c</fullName>
    <description>pre populated with a fixed ref, non editable</description>
    <label>Form Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>