main/default/objects/Free_Form_Endorsements__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Endorsement_Name__c</columns>
    <columns>Form_Number__c</columns>
    <columns>Quote__c</columns>
    <columns>Coverage_Effective_Date__c</columns>
    <columns>Applicable_Coverage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Number__c</field>
        <operation>notContain</operation>
        <value>AQUW</value>
    </filters>
    <label>All</label>
</ListView>