main/default/objects/Free_Form_Endorsements__c/listViews/Celerity_Free_Form_Endorsements.listView-meta.xml
<ListView>
    <fullName>Celerity_Free_Form_Endorsements</fullName>
    <columns>Endorsement_Name__c</columns>
    <columns>Form_Number__c</columns>
    <columns>Coverage_Effective_Date__c</columns>
    <columns>Quote__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Number__c</field>
        <operation>notContain</operation>
        <value>AQUW</value>
    </filters>
    <label>Celerity Free Form Endorsement Usage</label>
</ListView>